--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/output.css">
     <title>Norte a Sul Delivery</title>
@@ -60,7 +63,7 @@
                             <p class="font-bold text-lg">R$ 18,60</p>
 
                             <!-- Card -->
-                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Acarajé" data-price="18,60">
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Acarajé" data-price="18.60">
                                 <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
                                 <i class="fa fa-cart-plus text-lg text-white"></i>
                             </button>   
@@ -86,7 +89,7 @@
                             <p class="font-bold text-lg">R$ 15,90</p>
 
                             <!-- Card -->
-                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="X Caboquinho" data-price="15,90">
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="X Caboquinho" data-price="15.90">
                                 <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
                                 <i class="fa fa-cart-plus text-lg text-white"></i>
                             </button>   
@@ -112,7 +115,7 @@
                             <p class="font-bold text-lg">R$ 22,90</p>
 
                             <!-- Card -->
-                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Moqueca" data-price="22,90">
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Moqueca" data-price="22.90">
                                 <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
                                 <i class="fa fa-cart-plus text-lg text-white"></i>
                             </button>   
@@ -138,7 +141,7 @@
                             <p class="font-bold text-lg">R$ 45,90</p>
 
                             <!-- Card -->
-                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pato no Tucupi" data-price="45,90">
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Pato no Tucupi" data-price="45.90">
                                 <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
                                 <i class="fa fa-cart-plus text-lg text-white"></i>
                             </button>   
@@ -164,7 +167,7 @@
                             <p class="font-bold text-lg">R$ 60,90</p>
 
                             <!-- Card -->
-                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Tambaqui" data-price="60,90">
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Tambaqui" data-price="60.90">
                                 <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
                                 <i class="fa fa-cart-plus text-lg text-white"></i>
                             </button>   
@@ -190,7 +193,7 @@
                             <p class="font-bold text-lg">R$ 58,90</p>
 
                             <!-- Card -->
-                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Tacaca" data-price="58,90">
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Tacaca" data-price="58.90">
                                 <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
                                 <i class="fa fa-cart-plus text-lg text-white"></i>
                             </button>   <!-- Parou no 41:03 -->
@@ -199,7 +202,105 @@
             </div>
             <!-- FIM PRODUTO ITEM -->
         </main>
+
+
+        <div class="mx-auto max-w-7xl px-2 my-2">
+            <h2 class="font-bold text-3xl">Bebidas</h2>
+        </div>
+
+        <!-- GRID BEBIDAS -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-20" id="menu">
+            <!-- BEBIDA ITEM -->
+            <div class="flex gap-2 w-full">
+                <img src="./assets/refri-1.png" alt="Coca lata"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"/>
+                    <div class="w-full">
+                        <!-- Titulo -->
+                        <p class="font-bold">Coca lata</p>
+
+                        <!-- PREÇO E CARRINHO DE COMPRAS -->
+                        <div class="flex items-center gap-2 justify-between mt-3">
+                            <!-- Preço -->
+                            <p class="font-bold text-lg">R$ 6,00</p>
+
+                            <!-- Card -->
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Coca lata" data-price="6">
+                                <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
+                                <i class="fa fa-cart-plus text-lg text-white"></i>
+                            </button>
+                        </div>
+                    </div>
+            </div>
+            <!-- FIM BEBIDA ITEM -->
+
+            <!-- BEBIDA ITEM -->
+            <div class="flex gap-2 w-full">
+                <img src="./assets/refri-2.png" alt="Guaraná lata"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"/>
+                    <div class="w-full">
+                        <!-- Titulo -->
+                        <p class="font-bold">Guaraná lata</p>
+
+                        <!-- PREÇO E CARRINHO DE COMPRAS -->
+                        <div class="flex items-center gap-2 justify-between mt-3">
+                            <!-- Preço -->
+                            <p class="font-bold text-lg">R$ 6,00</p>
+
+                            <!-- Card -->
+                            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Guaraná lata" data-price="6">
+                                <!-- as propriedades do data serve para pegar o nome e o preço do produto para colocar no javaScripit -->
+                                <i class="fa fa-cart-plus text-lg text-white"></i>
+                            </button>
+                        </div>
+                    </div>
+            </div>
+            <!-- FIM BEBIDA ITEM -->
+        </div>
+        <!-- FIM GRID BEBIDAS -->
     </div>
     <!-- FIM MENU -->
+
+
+    <!-- MODAL CART -->
+    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden">
+        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+            <!-- (md:min-w-[600px]) O tamanho da modal fica melhor quando a tela está no desktop e menor de 600px ele diminui no celular -->
+            
+            <h2 class="text-center font-bold text-2xl mb-2">Meu Carrinho</h2>
+
+            <!-- ITENS NO CARRINHO -->
+            <div id="card-items" class="flex justify-between mb-2 flex-col"></div>
+
+            <!-- TOTAL DOS ITENS NO CARRINHO -->
+            <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
+
+            <!-- ENDEREÇO -->
+            <p class="font-bold mt-2">Endereço de entrega:</p>
+            <input type="text" placeholder="Digite seu endereço completo..." id="address" class="w-full border-2 p-1 rounded my-1">
+            <p class="text-red-600 hidden" id="address-warn">Digite seu endereço completo!</p>
+
+            <!-- BOTÕES -->
+            <div class="flex items-center justify-between mt-5 w-full">
+                <button id="close-modal-btn">Fechar</button>
+                <button id="checkout-btn" class="bg-green-500 text-white px-4 py-1 rounded">Finalizar Pedido</button>
+            </div>
+        </div>
+    </div>
+    <!-- FIM MODAL CART -->
+
+
+    <!-- BUTTON CART FOOTER -->
+    <footer class="w-full bg-red-500 py-3 fixed bottom-0 z-40 flex items-center justify-center">
+        <!-- (FIXED) Deixa ele fixo na tela -->
+        <!-- (BOTTOM) Sobrepoe os demais itens -->
+        <!-- (z-40) Deixa ele sempre na frente -->
+
+        <button class="flex items-center gap-2 text-white font-bold" id="cart-btn">
+            (<span class="" id="cart-count">0</span>)
+            Veja meu carrinho
+            <i class="fa fa-cart-plus text-lg text-white"></i>
+        </button>
+    </footer>
+    <!-- FIM BUTTON CART FOOTER -->
 </body>
 </html>
