--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
 
     <!-- MODAL CART -->
-    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden">
+    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99] items-center justify-center hidden" id="cart-modal">
         <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
             <!-- (md:min-w-[600px]) O tamanho da modal fica melhor quando a tela está no desktop e menor de 600px ele diminui no celular -->
             
@@ -302,5 +302,7 @@
         </button>
     </footer>
     <!-- FIM BUTTON CART FOOTER -->
+
+    <script src="script.js"></script>
 </body>
 </html>
