--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- (MB) margin em baixo -->
 
             <!-- Endereço -->
-            <span class="text-white font-medium">Rua Fecomercio Senac 123, Curitiba - PR</span>
+            <span class="text-white font-medium">Rua ZZZZZZzzz Teste 123, Curitiba - PR</span>
 
             <!-- Horario de funcionamento -->
             <div class="bg-green-600 px-4 py-1 rounded-lg mt-4" id="date-span">
